try using Amazon Corretto JDK 17